--- a/package.json
+++ b/package.json
@@ -3,17 +3,27 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@getbrevo/brevo": "^3.0.1",
+    "axios": "^1.11.0",
     "body-parser": "^2.2.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "twilio": "^5.8.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/carlosqtro/whatsapp-bot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/carlosqtro/whatsapp-bot/issues"
+  },
+  "homepage": "https://github.com/carlosqtro/whatsapp-bot#readme",
+  "description": ""
 }
