--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^2.2.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "sib-api-v3-sdk": "^8.5.0",
     "twilio": "^5.8.0"
   },
   "repository": {
